# llm-zai

./: .gitignore  LICENSE  README.md  __init__.py  debug_plugin.py  diagnose_api.py  llm-plugin-research-notes.md  llm-zai-plugin-checklist.md  llm_zai.py  plugin-development-commands.md  pyproject.toml  simple_test.py  test_advanced.py  test_api_manually.py  test_corrected_api.py  test_full_execute.py  test_headers.py  test_llm_zai.py  test_openai_format.py  todo.md
llm-zai/: llm_zai.py  pyproject.toml
llm-zai/llm_zai.egg-info/: PKG-INFO
llm_zai/: __init__.py
llm_zai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
