[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-zai"
version = "0.1.0"
description = "LLM plugin for Z.ai's GLM models"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "LLM Z.ai Plugin Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "llm>=0.27",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[project.entry-points.llm]
zai = "llm_zai:register_models"

[project.urls]
Homepage = "https://github.com/divsmith/llm-zai"
Repository = "https://github.com/divsmith/llm-zai"
Issues = "https://github.com/divsmith/llm-zai/issues"


[tool.setuptools.packages.find]
where = ["."]
include = ["llm_zai*"]
exclude = ["test_llm_zai*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["test_llm_zai.py"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]